# BoxyBang

./: .clang-format  .gitignore  CMakeLists.txt  STYLE.md  run.py  vcpkg.json
App/: CMakeLists.txt
App/Private/: App.cpp  App.h
CMake/: Cloner.cmake  DefaultFlags.cmake
Lexer/: CMakeLists.txt
Source/: CMakeLists.txt
Source/App/: CMakeLists.txt
Source/App/Private/: App.cpp  App.h  TestCaseMachineSingleton.h  main.cpp
Source/Lexer/: CMakeLists.txt
Source/Lexer/Private/: Lexer.cpp
Source/Lexer/Public/BoxyBang/Lexer/: Lexer.h
Source/Lexer/Public/Lexer/: Lexer.h
Source/Main/Private/: main.cpp
Source/Token/: CMakeLists.txt
Source/Token/Private/: Token.cpp  TokenFactorySingleton.cpp  TokenStream.cpp
Source/Token/Public/BoxyBang/Token/: Ident.h  IdentifierToken.h  NumberToken.h  OperatorToken.h  Token.h  TokenFactorySingleton.h  TokenStream.h
Source/Token/Public/BoxyBang/Token/ValueToken/: ValueToken.h
Source/Token/Public/BoxyBang/Token/ValueToken/Exceptions/: ValueTokenNoValueException.h
Source/Token/Public/Token/: IdentifierToken.h  NumberToken.h  OperatorToken.h  Token.h  TokenFactorySingleton.h  TokenStream.h  ValueToken.h
Source/Utils/: CMakeLists.txt
Source/Utils/Private/: Utils.cpp
Source/Utils/Public/BoxyBang/Utils/: Utils.h
Source/Utils/Public/Utils/: Defer.h  ForeInit.h  Utils.h
Token/: CMakeLists.txt
Token/Private/: TokenFactorySingleton.cpp
Token/Public/Token/: Number.h  Op.h  Token.h  TokenFactorySingleton.h  TokenStream.h
boxy_python/: __init__.py  cloner.py  utils.py
boxy_python/tools/clone/: cloner.py  main.py
boxy_python/utils/: __init__.py
