cmake_minimum_required(VERSION 3.20)
project(BoxyBang)

include(${CMAKE_SOURCE_DIR}/CMake/DefaultFlags.cmake)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 23)

add_executable(${PROJECT_NAME})

target_sources(${PROJECT_NAME} PRIVATE
    Private/main.cpp
    Private/App.cpp
)

target_link_libraries(${PROJECT_NAME} PRIVATE
    Lexer
    Token
)

target_compile_options(${PROJECT_NAME} PRIVATE
    ${BOXY_COMMON_FLAGS}
)